--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/bulma": "^1.2.1",
     "dotenv": "^8.2.0",
     "frontmatter-markdown-loader": "^2.1.0",
