--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^8.2.0",
     "frontmatter-markdown-loader": "^2.1.0",
     "mailgun-js": "^0.22.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "serialize-javascript": "4.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
